# agikad

./: .gitignore  AGENTS.md  README.md  SPEC.md  TODO.md  pyproject.toml
examples/: divider_demo.json  dual_p3_thermal_controller.json  dual_p3_thermal_controller.pcb.json
schemas/: connection-spec.schema.json  pcb-constraints.schema.json
src/agent_kicad/: __init__.py  cli.py  footprints.py  graph.py  kicad.py  mcp_server.py  models.py  pcb_constraints.py  sexpr.py  spec.py  symbols.py
src/agent_kicad/emitters/: __init__.py  kicad_pcb.py  kicad_pcb_worker.py  kicad_sch.py  skidl.py
